Fixing an issue to allow supporting multiple users
