# api.yaml
@@ -37,17 +37,8 @@ paths:
         500:
           description: Internal Server Error
 
-  /sessions/{sessionId}/upload:
+  /sessions/upload:
     put:
-      parameters:
-        - name: sessionId
-          in: path
-          description: The session id to be used when storing the data
-          required: true
-          schema:
-            type: string
-            format: uuid
-            example: 515ef9d0-2059-4a11-b5c3-7c8dae93b57d
       tags:
         - File Upload
       description: Upload a file with session data
